<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".TimerActivity">

    <TextView
            android:id="@+id/txtTempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=""
            android:textSize="60sp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
    />

    <Button
            android:text="@string/botao_iniciar_expediente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bIniciarExpediente"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="60dp"
            android:onClick="onClickIniciar"
    />
    <Button
            android:text="@string/botao_pausar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bPausar"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="60dp"
            android:onClick="onClickParar"
    />
    <Button
            android:text="@string/botao_encerrar_expediente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bEncerrarExpediente"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginBottom="20dp"
            android:onClick="onClickZerar"
    />

    <Button
            android:text="@string/botao_voltar_tela"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bVoltarTela"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:onClick="onClickMudarTela"
    />
</LinearLayout>