<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".RestauranteMainActivity">


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome_restaurante"
            android:layout_marginTop="50dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="60dp"
            android:textAlignment="center"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_margin="50dp"
            android:id="@+id/tvMessage"
            android:textAlignment="center"
    />
    <Button
            android:text="@string/botao_fazer_pedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bFazerPedido"
            android:layout_marginTop="50dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="60dp"
    />
    <Button
            android:text="@string/botao_consulta_horas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bTotalHoras"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="60dp"
    />
    <Button
            android:text="@string/botao_enviar_mensagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bAcessarMensagem"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="60dp"
            android:onClick="onAcessarMensageiro"
    />


</LinearLayout>